# nostrdb

./: .envrc  .gitignore  .gitmodules  .rgignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  SOCIAL_GRAPH.md  TODO  bench-ingest-many.c  bench-ingest.c  bench.c  build.rs  contacts.json  cpu.h  cursor.h  hex.h  io.h  jsmn.h  memchr.h  ndb.c  nostr_index.fbs  nostrdb.c  nostrdb.h  print_util.h  protected_queue.h  random.h  shell.nix  test.c  test_bucketed_uid_list.c  test_negentropy.c  test_socialgraph  test_socialgraph.c  threadpool.h
.github/workflows/: c-cpp.yml
bindings/c/: profile_builder.h  profile_json_parser.h  profile_reader.h  profile_verifier.h
bindings/rust/: ndb_meta.rs
bindings/swift/: NdbProfile.swift
ccan/ccan/crypto/sha256/: sha256.c
ccan/ccan/tal/: tal.c
ccan/ccan/tal/str/: str.c
docs/: api.md  architecture.md  cli.md  getting-started.md  metadata.md  ndb_query_visit.md
docs/bindings/: index.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  api.md  architecture.md  bindings.md  cli.md  getting-started.md  introduction.md  metadata.md
fuzzer/: README.md  simple_fuzzer.c
rust/: Cargo.toml  build.rs
rust/src/: config.rs  error.rs  lib.rs  ndb.rs
schemas/: meta.fbs  note.fbs  profile.fbs
src/: block.c  block.h  bucketed_u32_list.c  bucketed_u32_list.h  content_parser.c  cursor.h  giftwrap.c  hkdf_sha256.c  hkdf_sha256.h  hmac_sha256.c  invoice.c  invoice.h  markdown_parser.c  metadata.c  metadata.h  ndb_negentropy.c  ndb_negentropy.h  ndb_socialgraph.c  ndb_socialgraph.h  ndb_uid.c  ndb_uid.h  nip23.c  nip44.c  nip44.h  nostr_bech32.c  nostr_bech32.h  nostrdb.c  nostrdb.h  print_util.h  protected_queue.c  protected_queue.h  random.h  rcur.c  rcur.h  thread.h  threadpool.h  util.h
src/bindings/swift/: NdbMeta.swift  NdbNote.swift  NdbProfile.swift  NdbTagElem.swift  NdbTagIterator.swift
src/bolt11/: bech32.c
testdata/: author-filter.c  contacts-event.json  contacts.json  failed_size.json  old-new.json  profile-updates.json  profiles.json  random.json  reactions.json  search.json  test_counts.json
