[package]
name = "nostrdb"
authors = ["William Casarin <jb55@jb55.com>"]
description = "An unfairly fast embedded nostr database backed by lmdb"
readme = "README.md"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
