[package]
name = "nostrdb"
authors = ["William Casarin <jb55@jb55.com>"]
description = "An unfairly fast embedded nostr database backed by lmdb"
readme = "README.md"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = ["../deps", "src", "Cargo.toml", "../*.c", "../*.h"]

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
